package main.model;

public class FinalSquare extends Square {
  public FinalSquare(int pos, Board b) {
    super(pos, b);
  }
}
