package main.model;

public class Game {
    public void Game(String[] playerNames) {}
    public void play() {}
    public void makeBoard() {}
    public void makePlayers(String[] names) {}
    public void initializeGame() {}
    public void placePlayersAtFirstSquare() {}
    public boolean notOver() {return true;}
    public void movePlayer(int roll) {}
    public Player currentPlayer() {return null;}
}